--- a/css/slider.css
+++ b/css/slider.css
@@ -10,6 +10,11 @@ img {vertical-align: middle;}
     margin: auto;
 }
 
+.row {
+    width: 101%;
+}
+
+
 /* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
