--- a/css/slider.css
+++ b/css/slider.css
@@ -11,7 +11,28 @@ img {vertical-align: middle;}
 }
 
 .row {
-    width: 101%;
+    max-width: 101%;
+    background-color: #f1f1f1;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.balk {
+    height: 1px;
+    background-color: darkgray;
+    margin: 0px;
+    padding: 0px;
 }
 
 
