--- a/css/slider.css
+++ b/css/slider.css
@@ -17,8 +17,9 @@ img {vertical-align: middle;}
 
 .column {
     float: left;
-    width: 33.33%;
-    padding: 20px;
+    width: 32%;
+    padding: 5px;
+    margin-left: 1.3%;
 }
 
 /* Clear floats after the columns */
@@ -86,13 +87,16 @@ img {vertical-align: middle;}
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    margin: 10px;
-    height: 15px;
-    width: 30%;
+    height: 20px;
+    width: 33.33%;
     float: left;
     background-color: #bbb;
     display: inline-block;
     transition: background-color 0.6s ease;
+}
+
+.paginaindex{
+    width: 100%;
 }
 
 .active, .dot:hover {
