--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,47 @@ input[type=submit] {
 .email{
 
 }
+
+.a\.hoofdtext {
+    font-family: Aharoni;
+    font-size: 45px;
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+    margin-top:20px;
+}
+.kruis2{
+    float:left;
+    width: 5%;
+    margin-left: 50px;
+    margin-right: 7px;
+    margin-top: 20px;
+}
+
+.niksgevonden {
+    margin-left: 75px;
+    margin-right: 1100px;
+    margin-top: 50px;
+    border: black solid; background: lightgray; padding: 40px;
+}
+.itemnotfound2 {
+    font-size: 35px;
+    font-weight: bold;
+    font-family: Aharoni;
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.text2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin-left: 110px;
+}
+
+.terug {
+    font-weight: bold;
+    color: black;
+    margin-left: 570px;
+    border: black solid 2px; background: lightgray;
+    padding: 3px;
+}
