--- a/css/slider.css
+++ b/css/slider.css
@@ -11,7 +11,29 @@ img {vertical-align: middle;}
 }
 
 .row {
-    width: 101%;
+    max-width: 101%;
+    background-color: #f1f1f1;
+}
+
+.column {
+    float: left;
+    width: 32%;
+    padding: 5px;
+    margin-left: 1.3%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.balk {
+    height: 1px;
+    background-color: darkgray;
+    margin: 0px;
+    padding: 0px;
 }
 
 
@@ -65,13 +87,16 @@ img {vertical-align: middle;}
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
+    height: 20px;
+    width: 33.33%;
+    float: left;
     background-color: #bbb;
-    border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+}
+
+.paginaindex{
+    width: 100%;
 }
 
 .active, .dot:hover {
