--- a/css/slider.css
+++ b/css/slider.css
@@ -10,16 +10,32 @@ img {vertical-align: middle;}
     margin: auto;
 }
 
+.aanbiedingen{
+    width: 96%;
+    display: block;
+    background-color: #f1f1f1;
+    margin: auto;
+    border-color: black;
+    border-radius: 1px;
+    height: 300px;
+    position: relative;
+}
+
 .row {
-    max-width: 101%;
+    display: inline-block;
+    max-width: 100%;
+    margin-left: auto!important;
+    margin-right: auto!important;
+    position: relative;
     background-color: #f1f1f1;
 }
 
 .column {
     float: left;
-    width: 32%;
-    padding: 5px;
-    margin-left: 1.3%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 33.333%;
 }
 
 /* Clear floats after the columns */
@@ -45,7 +61,7 @@ img {vertical-align: middle;}
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: black;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
