--- a/css/style.css
+++ b/css/style.css
@@ -72,20 +72,6 @@ input[type=submit] {
     width: 35px;
 }
 
-.alles{
-    background: dodgerblue;
-    font-family: "Comic Sans MS";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}
-
-.email{
-
-}
-
 .a\.hoofdtext {
     font-family: Aharoni;
     font-size: 45px;
@@ -129,3 +115,52 @@ input[type=submit] {
     border: black solid 2px; background: lightgray;
     padding: 3px;
 }
+
+
+.loginBox{
+    background: lightgray;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 55%;
+    height : 45%;
+}
+
+.loginRow{
+    margin: 30px;
+}
+
+.loginHead{
+    text-align: center;
+}
+
+.loginColumn1{
+    text-align: right;
+    width: 30%;
+    float: left;
+}
+
+.loginColumn2{
+    width: 50%;
+    margin-left: 30%;
+    overflow: hidden;
+    padding-left: 10px;
+}
+
+.loginInput{
+    width: 100%;
+}
+
+a.loginLink{
+    padding-left: 40%;
+    text-decoration: none;
+    color: black;
+}
+
+a.loginLink:hover{
+    text-decoration: underline;
+    color: #3f3f3f;
+}
+
