--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ input[type=submit] {
 }
 
 a.loginLink{
-    padding-left: 40%;
+    margin-left: 40%;
     text-decoration: none;
     color: black;
 }
