--- a/css/browse.css
+++ b/css/browse.css
@@ -11,8 +11,8 @@
     padding: 15px 32px;
     text-align: left;
     text-decoration: none;
-    display: inline-block;
-    font-size: 20x;
+
+    font-size: 20px;
     cursor: pointer;
     color: floralwhite;
     font-family: "Arial Black";
@@ -27,7 +27,6 @@
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 20x;
     cursor: pointer;
     color: floralwhite;
     font-family: "Arial Black";
