--- a/css/browse.css
+++ b/css/browse.css
@@ -48,3 +48,10 @@
     height : 45%;
     text-align: center;
 }
+
+.text3{
+    font-family: Aharoni;
+    font-size: 30px;
+    color:black;
+    margin-right: 500px;
+}
