--- a/css/browse.css
+++ b/css/browse.css
@@ -16,7 +16,7 @@
     text-align: left;
     text-decoration: none;
 
-    font-size: 20px;
+    font-size: 16px;
     cursor: pointer;
     color: floralwhite;
     font-family: "Arial Black";
@@ -64,3 +64,7 @@
 float: left;
 }
 
+.productnaam{
+    width: 150px;
+    align-content: center;
+}
