--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,52 @@ a.loginLink:hover{
     color: #3f3f3f;
 }
 
+.scBox{
+    margin-left: 10%;
+    width: 80%;
+}
+
+.scRow{
+    overflow: hidden;
+    font-size: large;
+}
+
+.scImage{
+    margin: 10px;
+    float: left;
+    width: 8%;
+}
+
+.scName{
+    padding-top: 30px;
+    margin: 10px;
+    float: left;
+    width: 50%;
+}
+
+.scAmount{
+    padding-top: 30px;
+    margin: 10px;
+    float: left;
+    width: 7%;
+}
+
+.scPrice{
+    padding-top: 30px;
+    margin: 10px;
+    float: left;
+    width: 13%;
+}
+
+.scTPrice{
+    padding-top: 30px;
+    margin: 10px;
+    float: left;
+    width: 10%;
+}
+
+.scButton{
+    margin: 10px 10px 10px 85%;
+}
+
+
