--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -18,6 +18,10 @@
     margin-bottom: 50px;
 
 }
+.naambeschrijvingprijsnogopvoorraad{
+    float: right;
+    flex-direction: column;
+}
 
 .naam{
 
@@ -45,13 +49,6 @@
 
 .aantallen{
     margin-left: 40px;
-
-}
-
-
-.test{
-    float: right;
-    flex-direction: column;
 
 }
 
@@ -90,6 +87,3 @@
     padding-right: 450px;
 }
 
-.test{
-
-}
