--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -62,3 +62,14 @@
     text-align: center;
 }
 
+.tekstabout{
+    align-content: center;
+}
+
+.guarantee{
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    align-content: center;
+    height : 45%;
+}
