Made horizontal category bar

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,13 @@
 .button {
-    width: 20%!important;
+    width: 10%!important;
+    height: 54px;
+    padding-top: 0px;
+    padding-bottom: 30px;
+    padding-left: 10px;
 }
-.div {
-    width: 50%;
+
+.button:hover {
+    padding-top: 0px;
+    padding-bottom: 30px;
+    padding-left: 10px;
 }
