--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -106,5 +106,11 @@
     float:right;
     padding-right: 450px;
 }
-.x
+
+.bezorgdatum{
+    margin-top: -20px;
+    margin-left:50px;
+    font-size: 16px;
+    color: limegreen;
+}
 
