--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -74,6 +74,37 @@
     height : 45%;
 }
 
+.contactinfo{
+
+    width: 300px;
+    margin-left: 50px   ;
+    font-family: Arial;
+    color: black;
+    font-size: 15px;
+}
+
 .contact{
-    
+    display: inline-block;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+    margin-bottom: 50px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+    .column {
+        width: 100%;
+    }
 }
