--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ input[type=submit] {
     margin-left: 50px;
     margin-right: 400px;
     margin-top: 50px;
-    font-family Aharoni;
+    font-family: Aharoni;
     border: black solid; background: lightgray; padding: 40px;
 }
 .itemnotfound2 {
