--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,9 @@ input[type=submit] {
 
 .text2 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin-left: 110px;
+    font-size: 30px;
+    margin-left: 600px;
+    kd
 }
 
 .terug {
