--- a/css/home.css
+++ b/css/home.css
@@ -24,6 +24,7 @@
     table-layout: fixed;
     border-collapse: separate;
     border-spacing: 1em;
+    border: 0px;
 }
 
 .thhome{
@@ -33,8 +34,21 @@
     background-color: white;
 }
 
+.thhome:hover{
+    box-shadow: 0px 0px 2px 2px lightgrey;
+}
+
+.btn.btn-primary:hover{
+    box-shadow: 0px 0px 2px 2px lightgrey;
+}
+
+
 .slide-container {
     overflow: auto;
     white-space: nowrap;
+}
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
 }
 
