--- a/css/style.css
+++ b/css/style.css
@@ -169,50 +169,80 @@ a.loginLink:hover{
 .scBox{
     margin-left: 10%;
     width: 80%;
-}
-
-.scRow{
     overflow: hidden;
     font-size: large;
 }
 
+.scRow{
+    height: 100px;
+    margin: 5px;
+    padding-top: 38px;
+}
+
+.scHeadRow{
+    margin: 5px;
+}
+
+.scImageRow{
+     height: 100px;
+     margin: 5px;
+ }
+
 .scImage{
     margin: 5px;
     float: left;
-    width: 100px;
+    text-align: center;
 }
 
 .scName{
-    margin: 35px 5px 5px 5px;
+    margin: 5px;
     float: left;
     width: 48%;
 }
 
 .scAmount{
-    margin: 35px 5px 5px 5px;
+    margin: 5px;
     float: left;
     width: 9%;
 }
 
 .scPrice{
-    margin: 35px 5px 5px 5px;
+    margin: 5px;
     float: left;
     width: 13%;
     text-align: right;
 }
 
 .scTPrice{
-    margin: 35px 5px 5px 5px;
+    margin: 5px;
     float: left;
     width: 10%;
     text-align: right;
 }
 
 .scDelete{
-    margin: 32px 5px 5px 5px;
+    margin: 5px;
     float: left;
-    width: 32px;
-    height: 32px;
+    width: 43px;
+}
+
+.scButton{
+    margin-top: 10px;
+    width: 100%;
+}
+
+.scUpdate{
+    width: 100%;
+    border-radius: 4px;
+    background-color: dodgerblue;
+    border: dodgerblue;
+    color: white;
+    font-size: 14px;
+    padding: 4px;
+}
+
+.scEmpty{
+    text-align: center;
 }
 
 .paginatie{
