fixxxed it agaaain

--- a/css/browse.css
+++ b/css/browse.css
@@ -115,3 +115,10 @@
     box-shadow: 0px 0px 2px 2px lightgrey;
 }
 
+.resultskayleigh{
+    text-align: center;
+}
+
+.allProducts{
+    width: 250px;
+}
