--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ input[type=submit] {
 .text2 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    margin-left: 600px;
+    text-align: center;
 }
 
 .terug {
