--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -7,6 +7,7 @@
 .container{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    margin-bottom: 100px;
 }
 
 .btn{
@@ -58,17 +59,36 @@
 
 }
 
-.prijs{
+.H4{
+    margin: 0px;
+}
 
-    margin-top: 20px;
-    margin-left: 40px;
+.paynow{
+    margin-left: 30px;
+    font-size: 20px;
+}
+
+.prijs{
+    color: dodgerblue;
+    margin-left: 33px;
     font-size: 30px;
 }
 
-.   aantallen{
+.oudeprijs{
+    color: indianred;
+    margin-left: 5px;
+    font-size: 30px;
+}
+
+.safeoff{
+    margin-left: 30px;
+}
+
+.aantallen{
     margin-left: 40px;
 
 }
+
 
 
 .beschrijving2{
@@ -94,7 +114,7 @@
 .nogopvoorraad{
     margin-top: -20px;
 
-    margin-left:50px;
+    margin-left:30px;
     font-size: 16px;
 
 }
@@ -106,8 +126,8 @@
 }
 
 .bezorgdatum{
-    margin-top: -20px;
-    margin-left:50px;
+    margin-top: -27px;
+    margin-left:100px;
     font-size: 16px;
     color: limegreen;
 }
