--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -142,3 +142,11 @@
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
+
+.verzendmethode\/css{
+    position: absolute;
+    top: 64%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
