--- a/css/betalen.css
+++ b/css/betalen.css
@@ -40,11 +40,18 @@
         clear: both;
     }
 }
+.paymentpage{
+    display: table;
+    width:100%;
+}
 
 .contact{
-    float: left;
-    width: 66.67%;
-    padding: 15px;
-    margin-bottom: 50px;
+    display: table-cell;
+}
+
+
+.sendmethode{
+    display: table-cell;
+    width: 200px;
 }
 
