--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -91,9 +91,10 @@
 /* Create three equal columns that floats next to each other */
 .column {
     float: left;
-    width: 33.33%;
+    width: 23.33%;
     padding: 15px;
     margin-bottom: 50px;
+    margin-left: 30px;
 }
 
 /* Create three equal columns that floats next to each other */
