--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,15 @@ a.loginLink:hover{
 }
 
 .scImageRow{
-     height: 100px;
-     margin: 5px;
- }
+    height: 100px;
+    margin: 5px;
+}
+
+.scDeleteRow{
+    margin: 5px;
+    padding-top: 34px;
+    height: 100px;
+}
 
 .scImage{
     margin: 5px 5px 5px 5px;
@@ -234,6 +240,12 @@ a.loginLink:hover{
 .scButton{
     margin-top: 10px;
     width: 100%;
+}
+
+.scTrashcan{
+    padding: 0;
+    border: none;
+    background: none;
 }
 
 .scUpdate{
