--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,13 @@ input[type=submit] {
     margin: 30px;
 }
 
+.loginRow1 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: -30px;
+}
+
 .loginHead{
     text-align: center;
 }
