--- a/css/style.css
+++ b/css/style.css
@@ -284,12 +284,13 @@ a.scLink:hover{
 }
 
 .errorBox{
+    position: absolute;
     text-align: center;
-    border-style: solid;
     margin-left: 45%;
     margin-right: 45%;
     margin-top: 2%;
     padding: 1%;
     background-color: red;
     color: white;
+    border-radius: 20px;
 }
