--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -7,7 +7,7 @@
 .container{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
 .btn{
@@ -479,4 +479,14 @@
     margin: 2px;
     background-color: #a0a0a0;
     opacity:  0.5;
+}
+.countdown{
+    position: relative;
+    left: 30px;
+    border: 2px dashed black;
+    font-weight:bold;
+    background: limegreen;
+    text-align: center;
+    width:42%;
+    padding-top: 1.3%;
 }
