--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -7,7 +7,7 @@
 .container{
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
 }
 
 .btn{
@@ -35,7 +35,7 @@
     width: 480px;
     height: 410px;
     margin-top: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 100px!important;
 
 }
 .naambeschrijvingprijsnogopvoorraad{
