--- a/css/style.css
+++ b/css/style.css
@@ -189,12 +189,22 @@ a.loginLink:hover{
 }
 
 .scBox{
-    top: 40%;
+    top: 340px;
     margin: 0 -50% 0 50%;
     transform: translate(-50%);
     position: absolute;
     overflow: hidden;
     font-size: large;
+    width: 1100px;
+}
+
+.scBoxFoot{
+    margin: 10px;
+    overflow: hidden;
+    font-size: large;
+    width: 1058px;
+    height: 300px;
+    text-align: right;
 }
 
 .scRow{
@@ -283,6 +293,10 @@ a.loginLink:hover{
 
 .scEmpty{
     text-align: center;
+}
+
+.scDiscountMessage{
+    margin: 80px 60px 0px 0px;
 }
 
 .Inputborder{
