--- a/css/betalen.css
+++ b/css/betalen.css
@@ -2,18 +2,11 @@
     margin-left: 50px;
 }
 
-.column{
-body::-webkit-scrollbar{
-    width: 1em;
-}
-
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
-}
-
+.orderlist{
+    background-color: lightblue;
+    width: 231px;
+    height: 100px;
+    overflow: auto;
+    border: 2px solid black;
+    float: left;
 }
