--- a/css/productBekijken.css
+++ b/css/productBekijken.css
@@ -45,7 +45,7 @@
 
 .naam{
 
-    padding-top: 60px;
+
     margin-left: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 34px;
@@ -67,6 +67,8 @@
 .paynow{
     margin-left: 30px;
     font-size: 20px;
+    margin-top: -15px;
+
 }
 
 .prijs{
@@ -113,7 +115,8 @@
 
 
 .nogopvoorraad{
-    margin-top: -20px;
+    margin-top: -30px;
+    margin-bottom: -20px;
 
     margin-left:30px;
     font-size: 16px;
@@ -127,7 +130,8 @@
 }
 
 .bezorgdatum{
-    margin-top: -27px;
+    margin-top: 4px;
+
     margin-left:238px;
     font-size: 16px;
     color: limegreen;
@@ -489,4 +493,16 @@
     text-align: center;
     width:42%;
     padding-top: 1.3%;
+    margin-top: -15px;
+
+}
+
+.share{
+    margin-top: 20px;
+    margin-bottom: -50px;
+    margin-left: 400px;
+}
+
+.warrantypolicy{
+    margin-top: -15px;
 }
